<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_margin="8dp"
    android:background="@drawable/background_card">

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:contentDescription="@string/like_state"
        android:src="@drawable/ic_favorite_48"
        app:layout_constraintEnd_toEndOf="@+id/sep_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="@+id/sep_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite" />

    <View
        android:id="@+id/sep_fav"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="#AAAAAA"
        app:layout_constraintStart_toEndOf="@id/favorite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/departure_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/departure"
        app:layout_constraintStart_toEndOf="@id/sep_fav"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/departure_details"
        app:layout_constraintStart_toEndOf="@id/sep_fav"
        app:layout_constraintTop_toBottomOf="@id/departure_hint" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_dep"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:barrierDirection="end"
        app:constraint_referenced_ids="departure,departure_hint" />

    <View
        android:id="@+id/sep_arr"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="#AAAAAA"
        app:layout_constraintStart_toEndOf="@id/barrier_dep"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arrival_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/arrival"
        app:layout_constraintStart_toEndOf="@id/sep_arr"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/arrival_details"
        app:layout_constraintStart_toEndOf="@id/sep_arr"
        app:layout_constraintTop_toBottomOf="@id/arrival_hint" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_arr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:barrierDirection="end"
        app:constraint_referenced_ids="arrival,arrival_hint" />

    <View
        android:id="@+id/sep_det"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="#AAAAAA"
        app:layout_constraintEnd_toStartOf="@id/details"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/details_air_travel"
        android:src="@drawable/ic_format_list_bulleted_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>