<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wildberries_theme"
    android:padding="16dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_title"
        android:elevation="4dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_format_list_bulleted_48"
        app:title="@string/details_title"
        app:titleTextColor="@color/black" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/departure_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/departure_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="@string/departure_airport" />

        <TextView
            android:id="@+id/departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departure_airport"
            tools:text="@string/departure_date" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/arrival_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departure_details">

        <TextView
            android:id="@+id/arrival_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departure_date"
            tools:text="@string/arrival_airport" />

        <TextView
            android:id="@+id/return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arrival_airport"
            tools:text="@string/arrival_date" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/price_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_title"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrival_details"
        tools:text="@string/price" />

    <ImageButton
        android:id="@+id/favorite_flights"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/background_title"
        android:contentDescription="@string/push_on_like"
        android:padding="16dp"
        android:src="@drawable/ic_favorite_48"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/price_flight"
        app:layout_constraintTop_toBottomOf="@id/arrival_details" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src = "@drawable/ic_arrow_back_40"
        android:id="@+id/back_on_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/back_on_list" />


</androidx.constraintlayout.widget.ConstraintLayout>